# shadertoy_OpenGL4

./: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: shader1.frag  shader2.frag
src/: GLSLProgram.cpp  GLSLProgram.h  indexBuffer.cpp  indexBuffer.h  main.cpp  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
